--- a/distribution/doc/Release_notes.txt
+++ b/distribution/doc/Release_notes.txt
@@ -1,12 +1,12 @@
-Agilefant 3.5.3
+Agilefant 3.5.4
 Release notes
-2015-02-23
+2015-07-03
 --
 
 Please spend a couple of minutes to register your organization at
 http://tinyurl.com/agilefant-registration-2013
 
-If you need support for your open source Agilefant version, we also offer support via the Agilefant development team. See more details at http://agilefant.com/pricing/open-source-version-support/?utm_source=rel_notes&utm_campaign=3.5.3
+If you need support for your open source Agilefant version, we also offer support via the Agilefant development team. See more details at http://agilefant.com/pricing/open-source-version-support/?utm_source=rel_notes&utm_campaign=3.5.4
 
 Getting a support contract is also a great way to support Agilefant development efforts.
 
@@ -18,6 +18,11 @@ http://agilefant.com/sign-up/
 +--------------------+
 |     CHANGESET      |
 +--------------------+
+
+Changes from 3.5.3
+2015-07-03
+Bug fixes:
++ Fix endless loop when loading iteration burndown 
 
 Changes from 3.5.2
 2015-02-23
